# minimal_plugin

./: .gitignore  CMakeLists.txt  README.md  plugin.cpp
glad/: gen.md
gldraw/: VertexManager.h  colour.h  geom.h  textures.h
gldraw/shaders/: coloured_vertex.cpp  coloured_vertex.h
glmath/: glmath.natvis  matrices.h  projections.h  vectors.h
resources/: uvgrid.md
scripts/: install.bat
stb/: stb.md  stb_image.cpp
